--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="height:100%">
+<body style="height:100%;
+            background-color: white;" >
+            
     <img src="Vaca.jpeg" alt="My Image" style="width:100%;">
 </body>
 </html>
