--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="height:100%;
-            background-color: white;" >
-            
+<body style="height:100%; background-color: white; display: flex; align-items: center; justify-content: center;" >
+
     <img src="Vaca.jpeg" alt="My Image" style="width:100%;">
 </body>
 </html>
