--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="height:100%; background-color: white; display: flex; align-items: center; justify-content: center;" >
+<body style="height:100%; background-color: white;" >
 
     <img src="Vaca.jpeg" alt="My Image" style="width:100%;">
 </body>
