--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <img id="dynamicImage" src="" alt="My Image" style="width:100%;">
 
   <script>
-    const path = window.location.pathname; // e.g. "/boda"
-
+    const path = window.location.pathname; 
     const image = document.getElementById("dynamicImage");
 
     if (path === "/" || path === "/index.html") {
