--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       image.alt = "Cachorro";
     } else {
       image.src = "NotFound.jpeg";
-      image.alt = "Devido a falhas no orçamento não foi possivél colocar imagem aqui, em caso de: duvida, interesse na tuna ou falta de cerveja contactar - 919065748";
+      image.alt = "Devido a falhas no orçamento não foi possivel colocar imagem aqui, em caso de: duvida, interesse na tuna ou falta de cerveja contactar - 919065748";
     }
   </script>
 </body>
