--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       image.src = "Vaca.jpeg";
       image.alt = "Vaca";
     } else if (path === "/boda") {
-      image.src = "Cow1.jpeg";
+      image.src = "Boda.jpeg";
       image.alt = "Boda";
     } else if (path === "/cachorro") {
-      image.src = "Cow2.jpeg";
+      image.src = "Cachorro.jpeg";
       image.alt = "Cachorro";
     } else {
       image.src = "NotFound.jpeg";
